objects/nRetail__Income__c.object
<CustomObject>
    <description>DEPRECATED- The income object stores details about an applicant&apos;s income.</description>
    <fields>
        <fullName>nRetail__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and represents the account to which this income belongs.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and represents the contact who has this income.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Income_Source__c</fullName>
        <description>This field is optional and represents the source of the applicant&apos;s income.</description>
        <label>Income Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pay Stubs</fullName>
                </value>
                <value>
                    <fullName>Tax Return</fullName>
                </value>
                <value>
                    <fullName>W2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRetail__Income_Type__c</fullName>
        <description>This field is required and represents the type of income.</description>
        <label>Income Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alimony Support</fullName>
                </value>
                <value>
                    <fullName>Annual Bonus/Commission</fullName>
                </value>
                <value>
                    <fullName>Gross Annual Income</fullName>
                </value>
                <value>
                    <fullName>Investment/Trust Income</fullName>
                </value>
                <value>
                    <fullName>Military Income</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Part Time Income</fullName>
                </value>
                <value>
                    <fullName>Rental Income</fullName>
                </value>
                <value>
                    <fullName>Self Employment Income</fullName>
                </value>
                <value>
                    <fullName>Taxable Income</fullName>
                </value>
                <value>
                    <fullName>Total Before Tax Income</fullName>
                </value>
                <value>
                    <fullName>Unemployment Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRetail__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and represents the loan this income is related to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Monthly_Income__c</fullName>
        <description>This field is required and represents the amount of an applicant&apos;s monthly income.</description>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__Yearly_Income__c</fullName>
        <description>This field is optional and represents the amount of an applicant&apos;s yearly income.</description>
        <label>Yearly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>-D Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>nRetail__Monthly_Yearly_Income</fullName>
        <active>true</active>
        <description>Monthly income must be 1/12 of yearly income.</description>
        <errorConditionFormula>nRetail__Monthly_Income__c != ROUND(nRetail__Yearly_Income__c/12,2)</errorConditionFormula>
        <errorMessage>Monthly income must be 1/12 of yearly income.</errorMessage>
    </validationRules>
</CustomObject>